improved image resolution

--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
       
       <img class="avatar avatar-circle"
            width="270" height="270"
-           src="/authors/admin/avatar_hub667de7568adbe779fb0a6e92d37a21f_2418593_270x270_fill_q75_lanczos_center.jpg" alt="Edwin Pan">
+           src="/authors/admin/avatar.jpg" alt="Edwin Pan">
       
 
       <div class="portrait-title">
