fixing color choice

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.0f229d4b7ebad1917a9a357cba2effab.css" />
+  <link rel="stylesheet" href="/css/wowchemy.ed45adb0408b5d976928681c47e16f0d.css" />
 
   
   
@@ -306,7 +306,7 @@
 <link rel="icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_32x32_fill_lanczos_center_3.png" />
 <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_180x180_fill_lanczos_center_3.png" />
 
-<meta name="theme-color" content="#1565c0" />
+<meta name="theme-color" content="#2962ff" />
 
 
 
