--- a/project/ee330/index.html
+++ b/project/ee330/index.html
@@ -289,8 +289,8 @@
 
 
 
-<link rel="icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_180x180_fill_lanczos_center_3.png" />
+<link rel="icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_32x32_fill_lanczos_center_3.png" />
+<link rel="apple-touch-icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_180x180_fill_lanczos_center_3.png" />
 
 <meta name="theme-color" content="#2962ff" />
 
@@ -312,8 +312,8 @@
 
 <meta property="twitter:card" content="summary_large_image" />
 
-  <meta property="twitter:site" content="@wowchemy" />
-  <meta property="twitter:creator" content="@wowchemy" />
+  <meta property="twitter:site" content="@edwin-pan" />
+  <meta property="twitter:creator" content="@edwin-pan" />
 <meta property="twitter:image" content="https://edwin-pan.github.io/project/ee330/featured.png" />
 <meta property="og:site_name" content="Edwin Pan" />
 <meta property="og:url" content="https://edwin-pan.github.io/project/ee330/" />
@@ -372,7 +372,7 @@
     "name": "Edwin Pan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://edwin-pan.github.io/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_192x192_fill_lanczos_center_3.png"
+      "url": "https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_192x192_fill_lanczos_center_3.png"
     }
   },
   "description": "This work proposes a regularization technique for meta-learning models that gives the model designer more control over the information flow during meta-training. Our method consists of a regularization function that is constructed by maximizing the distance between task-summary statistics, in the case of black-box models and task specific network parameters in the case of optimization based models during meta-training. Our proposed regularization function shows an accuracy boost of ∼ 36% on the Omniglot dataset for 5-way, 1-shot classification using black-box method and for 20-way, 1-shot classification problem using optimization-based method."
