--- a/project/cs331b/index.html
+++ b/project/cs331b/index.html
@@ -289,8 +289,8 @@
 
 
 
-<link rel="icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_180x180_fill_lanczos_center_3.png" />
+<link rel="icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_32x32_fill_lanczos_center_3.png" />
+<link rel="apple-touch-icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_180x180_fill_lanczos_center_3.png" />
 
 <meta name="theme-color" content="#2962ff" />
 
@@ -312,8 +312,8 @@
 
 <meta property="twitter:card" content="summary_large_image" />
 
-  <meta property="twitter:site" content="@wowchemy" />
-  <meta property="twitter:creator" content="@wowchemy" />
+  <meta property="twitter:site" content="@edwin-pan" />
+  <meta property="twitter:creator" content="@edwin-pan" />
 <meta property="twitter:image" content="https://edwin-pan.github.io/project/cs331b/featured.png" />
 <meta property="og:site_name" content="Edwin Pan" />
 <meta property="og:url" content="https://edwin-pan.github.io/project/cs331b/" />
@@ -372,7 +372,7 @@
     "name": "Edwin Pan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://edwin-pan.github.io/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_192x192_fill_lanczos_center_3.png"
+      "url": "https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_192x192_fill_lanczos_center_3.png"
     }
   },
   "description": "Humans posess a vast sensorimotor knowledge base that must be utilized to accelerate robot policy learning. While existing methods of demonstration generally ask humans to directly manipulate the robot’s state, this work utilizes a more natural demonstration capture platform (i.e. mouse and keyboard) to train deep learning networks on a motion planning task. Through qualitative and quantitative analysis, we demonstrate that such methods can successfully supervise imitation learning policies."
