--- a/project/cs598/index.html
+++ b/project/cs598/index.html
@@ -289,8 +289,8 @@
 
 
 
-<link rel="icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_180x180_fill_lanczos_center_3.png" />
+<link rel="icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_32x32_fill_lanczos_center_3.png" />
+<link rel="apple-touch-icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_180x180_fill_lanczos_center_3.png" />
 
 <meta name="theme-color" content="#2962ff" />
 
@@ -312,8 +312,8 @@
 
 <meta property="twitter:card" content="summary_large_image" />
 
-  <meta property="twitter:site" content="@wowchemy" />
-  <meta property="twitter:creator" content="@wowchemy" />
+  <meta property="twitter:site" content="@edwin-pan" />
+  <meta property="twitter:creator" content="@edwin-pan" />
 <meta property="twitter:image" content="https://edwin-pan.github.io/project/cs598/featured.png" />
 <meta property="og:site_name" content="Edwin Pan" />
 <meta property="og:url" content="https://edwin-pan.github.io/project/cs598/" />
@@ -372,7 +372,7 @@
     "name": "Edwin Pan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://edwin-pan.github.io/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_192x192_fill_lanczos_center_3.png"
+      "url": "https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_192x192_fill_lanczos_center_3.png"
     }
   },
   "description": "Millimeter-wave radar has the potential to offer a weather-agnostic sensing solution to pedestrian classification. To this end, I applied a CNN architecture to micro-doppler spectrogram data simulated through Matlab in an attempt to distinguish between a pedestrian radar motion spectrogram and a bicycle radar motion spectrogram."
