--- a/publication/tta/index.html
+++ b/publication/tta/index.html
@@ -289,8 +289,8 @@
 
 
 
-<link rel="icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_180x180_fill_lanczos_center_3.png" />
+<link rel="icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_32x32_fill_lanczos_center_3.png" />
+<link rel="apple-touch-icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_180x180_fill_lanczos_center_3.png" />
 
 <meta name="theme-color" content="#2962ff" />
 
@@ -313,13 +313,13 @@
 
 <meta property="twitter:card" content="summary" />
 
-  <meta property="twitter:site" content="@wowchemy" />
-  <meta property="twitter:creator" content="@wowchemy" />
-<meta property="twitter:image" content="https://edwin-pan.github.io/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_512x512_fill_lanczos_center_3.png" />
+  <meta property="twitter:site" content="@edwin-pan" />
+  <meta property="twitter:creator" content="@edwin-pan" />
+<meta property="twitter:image" content="https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_512x512_fill_lanczos_center_3.png" />
 <meta property="og:site_name" content="Edwin Pan" />
 <meta property="og:url" content="https://edwin-pan.github.io/publication/tta/" />
 <meta property="og:title" content="Transformers with Topological Attention (TTA) | Edwin Pan" />
-<meta property="og:description" content="Submission is in progress" /><meta property="og:image" content="https://edwin-pan.github.io/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="Submission is in progress" /><meta property="og:image" content="https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
 
   
     <meta
@@ -369,7 +369,7 @@
     "name": "Edwin Pan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://edwin-pan.github.io/media/icon_hu4b3e5c57071d82c166696f82e07b8121_36942_192x192_fill_lanczos_center_3.png"
+      "url": "https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_192x192_fill_lanczos_center_3.png"
     }
   },
   "description": "Submission is in progress"
