--- a/project/ee330/index.html
+++ b/project/ee330/index.html
@@ -212,7 +212,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.ed45adb0408b5d976928681c47e16f0d.css" />
+  <link rel="stylesheet" href="/css/wowchemy.0f229d4b7ebad1917a9a357cba2effab.css" />
 
   
   
@@ -289,10 +289,10 @@
 
 
 
-<link rel="icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_180x180_fill_lanczos_center_3.png" />
+<link rel="icon" type="image/png" href="/media/icon_hu7bc63450383e489a82523e7f14590ce4_19642_32x32_fill_lanczos_center_3.png" />
+<link rel="apple-touch-icon" type="image/png" href="/media/icon_hu7bc63450383e489a82523e7f14590ce4_19642_180x180_fill_lanczos_center_3.png" />
 
-<meta name="theme-color" content="#2962ff" />
+<meta name="theme-color" content="#1565c0" />
 
 
 
@@ -372,7 +372,7 @@
     "name": "Edwin Pan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_192x192_fill_lanczos_center_3.png"
+      "url": "https://edwin-pan.github.io/media/icon_hu7bc63450383e489a82523e7f14590ce4_19642_192x192_fill_lanczos_center_3.png"
     }
   },
   "description": "This work proposes a regularization technique for meta-learning models that gives the model designer more control over the information flow during meta-training. Our method consists of a regularization function that is constructed by maximizing the distance between task-summary statistics, in the case of black-box models and task specific network parameters in the case of optimization based models during meta-training. Our proposed regularization function shows an accuracy boost of ∼ 36% on the Omniglot dataset for 5-way, 1-shot classification using black-box method and for 20-way, 1-shot classification problem using optimization-based method."
