--- a/project/cs238/index.html
+++ b/project/cs238/index.html
@@ -212,7 +212,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.ed45adb0408b5d976928681c47e16f0d.css" />
+  <link rel="stylesheet" href="/css/wowchemy.0f229d4b7ebad1917a9a357cba2effab.css" />
 
   
   
@@ -289,10 +289,10 @@
 
 
 
-<link rel="icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_180x180_fill_lanczos_center_3.png" />
+<link rel="icon" type="image/png" href="/media/icon_hu7bc63450383e489a82523e7f14590ce4_19642_32x32_fill_lanczos_center_3.png" />
+<link rel="apple-touch-icon" type="image/png" href="/media/icon_hu7bc63450383e489a82523e7f14590ce4_19642_180x180_fill_lanczos_center_3.png" />
 
-<meta name="theme-color" content="#2962ff" />
+<meta name="theme-color" content="#1565c0" />
 
 
 
@@ -372,7 +372,7 @@
     "name": "Edwin Pan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://edwin-pan.github.io/media/icon_huac445de83ad1697ae42e045d6eab4591_14467_192x192_fill_lanczos_center_3.png"
+      "url": "https://edwin-pan.github.io/media/icon_hu7bc63450383e489a82523e7f14590ce4_19642_192x192_fill_lanczos_center_3.png"
     }
   },
   "description": "This project compares the performance of a Q-learning based reinforcement learning approach with the basic strategy advised by online guides for learning to play Blackjack. The results show that the Q-learning algorithm significantly outperformed the basic strategy, achieving a higher win rate and average return over a large number of simulated games. The findings suggest that Q-learning can be an effective approach to learning to play Blackjack, offering a better strategy than the basic strategy recommended by online guides."
